# Monaco_DLCourse

./: .gitignore  2026_CorsoPhD_DAndrea_Monaco.docx  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: precipitation.yaml  urban_thermal.yaml
data/: README.md  download.py
notebooks/: 01_precipitation_postprocessing.ipynb  01_precipitation_postprocessing_it.ipynb  02_urban_thermal_comfort.ipynb  02_urban_thermal_comfort_it.ipynb
scripts/: generate_slides.py
slides/: outline.md
src/: utils.py
